Changed button size in mobile view

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         <p class="app-description">This yoga app is designed to assist you with your yoga and mindfulness practice.
 
           </p>
-        <button type="button" class="button btn btn-primary px-4 btn-lg mb-4">Launch yoga app</button>
+        <button type="button" class="button-app btn btn-primary px-4 btn-lg mb-4">Launch yoga app</button>
       </div>
       <br>
       <div class="row mb-4 mt-4">
         <div class="col-md-6">
           <h2 class="d-flex justify-content-start">Weather App</h2>
           <p class="app-description">This weather app is designed to give you accurate information in your preferred destination. Please enter the destination, click on current, and view today's weather and the forecast for the next 5 days.</p>
-          <button type="button" class="button btn btn-primary px-4 btn-lg mb-4">Launch weather app</button>
+          <button type="button" class="button-app btn btn-primary px-4 btn-lg mb-4">Launch weather app</button>
         </div>
         <div class="col-md-6">
           <img src="images/weather.png" class="img-fluid mb-4 d-sm-none d-md-block img-display" alt="Weather app image">
@@ -90,7 +90,7 @@
           <div class="col-md-6">
             <h2 class="d-flex justify-content-start mt-4">Yogurt recipe app</h2>
             <p class="app-description">This app is designed to provide you with recipe ideas, all using yogurt.</p>
-            <button type="button" class="button btn btn-primary px-4 btn-lg">Launch recipe app</button>
+        <button type="button" class="button-app btn btn-primary px-4 btn-lg px-4">Launch recipe app</button>
           </div>       
         </div>       
 
