Updated styling and about section

--- a/about.html
+++ b/about.html
@@ -54,24 +54,14 @@
     </nav>
     <br>
     <h1 class="title-mobile mb-2">About me</h1>
-    <h3 class="mb-3">Front-end developer from Shrewsbury, UK</h3>
 
       <header class="px-4">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
-      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
-      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
-      harum.
+      Junior Front-end developer based in Madrid specialised in React, Javascript, Bootstrap and Responsive Web Design. Interested in opportunities to develop my skills, with a particular focus on React.js.
       </header>
     <div class="container mt-4">
       <div class="row d-flex justify-content-between">
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-width-about img-fluid d-flex border border-white border-1 shadow p-3 mb-5 bg-body rounded" alt="Weather app image" />
-        </div>
-        <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-width-about img-fluid d-flex border border-white border-1 shadow p-3 mb-5 bg-body rounded" alt="Yoga app image" />
-        </div>
-        <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-width-about img-fluid d-flex border border-white border-1 shadow p-3 mb-5 bg-body rounded" alt="Yoghurt image" />
+          <img src="images/LinkedIn Photo.jpeg" class="img-width-about img-fluid d-flex border border-white border-1 shadow p-3 mb-5 bg-body rounded" alt="Weather app image" />
         </div>
       </div>
     </div>
@@ -81,6 +71,17 @@
       <a href="mailto:[email]" class="email-link pb-5" id="contact" title="Email address">
         sarahwhitehouse81@gmail.com
       </a>
+      <div class="text-center icon">
+        <a href="https://www.linkedin.com/in/sarah-whitehouse-17a48a150/" target="_blank">
+      <img src="images/linkedin.png" width="20" /> 
+      </a>
+      <a href="https://github.com/sarahwhitehouse17" target="_blank">
+      <img src="images/github-sign.png" width="20" alt="">
+      </a>
+        <a href="mailto:sarahwhitehouse81@gmail.com">
+      <img src="images/email-contact.png" width="20" alt="">
+      </a>
+      </div>
     </div>
   </body>
 </html>
