Weather app and HTML updates

--- a/index.html
+++ b/index.html
@@ -62,35 +62,41 @@
     <div class="container container-fluid d-flex justify-content-center">
     <div class="row mb-4 mt-4">
       <div class="col-md-6">
-        <img src="images/yoga.png" class="img-fluid img-display
+        <a href="https://react-dictionaryproject.netlify.app" target="_blank">
+        <img src="images/react-dictionary-website.png" class="img-fluid img-display
         
    mb-3" alt="Yoga image">
+   </a>
       </div>
       <div class="col-md-6">
-        <h2 class="d-flex justify-content-start mt-2">Yoga App</h2>
-        <p class="app-description">This yoga app is designed to assist you with your yoga and mindfulness practice.
+        <h2 class="d-flex justify-content-start mt-2">Dictionary</h2>
+        <p class="app-description">I used React and API integration to create an online dictionary.
 
           </p>
-        <button type="button" class="button-app btn btn-primary px-4 btn-lg mb-4">Launch yoga app</button>
+          <a href="https://react-dictionaryproject.netlify.app/" target="_blank" class="project">View project</a>
       </div>
       <br>
       <div class="row mb-4 mt-4">
         <div class="col-md-6">
           <h2 class="d-flex justify-content-start">Weather App</h2>
-          <p class="app-description">This weather app is designed to give you accurate information in your preferred destination. Please enter the destination, click on current, and view today's weather and the forecast for the next 5 days.</p>
-          <button type="button" class="button-app btn btn-primary px-4 btn-lg mb-4">Launch weather app</button>
+          <p class="app-description">This weather app is designed using React.js.</p>
+          <a href="https://react-weather-app-project-17.netlify.app/" target="_blank" class="project">View project</a>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid mb-4 d-sm-none d-md-block img-display" alt="Weather app image">
+          <a href="https://react-weather-app-project-17.netlify.app" target="_blank">
+          <img src="images/React-weather-app.png" class="img-fluid mb-4 d-sm-none d-md-block img-display" alt="Weather app image">
+          </a>
         </div>   
         <div class="row mb-4">
           <div class="col-md-6">
-            <img src="images/yogurt.png" class="img-fluid mb-2 mt-4 d-sm-none d-md-block img-display" alt="Yoghurt image">
+            <a href="https://koh-tao-travel-page.netlify.app/" target="_blank">
+            <img src="images/javascript-travel-page.png" class="img-fluid mb-2 mt-4 d-sm-none d-md-block img-display" alt="Yoghurt image">
+            </a>
           </div>
           <div class="col-md-6">
-            <h2 class="d-flex justify-content-start mt-4">Yogurt recipe app</h2>
-            <p class="app-description">This app is designed to provide you with recipe ideas, all using yogurt.</p>
-        <button type="button" class="button-app btn btn-primary px-4 btn-lg px-4">Launch recipe app</button>
+            <h2 class="d-flex justify-content-start mt-4">Travel blog</h2>
+            <p class="app-description">This blog is designed using Javascript and covers the first stop of my backpacking trip; Koh Tao.</p>
+            <a href="https://koh-tao-travel-page.netlify.app/" target="_blank" class="project">View project</a>
           </div>       
         </div>       
 
